[package]
name = "voolibow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.9.2", features = ["macros", "auto-send"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.19.2", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
rand = "0.8.5"